update xjtu assets instead of zju

--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass{zjureport}
+\documentclass{xjtureport}
 % =============================================
 % Part 0 Edit the info
 % =============================================
