--- a/xjtureport.cls
+++ b/xjtureport.cls
@@ -89,7 +89,7 @@
 \newcommand{\makeheader}{
 \begin{figure}[h]
   \begin{minipage}{0.7\linewidth}
-    \centerline{\includegraphics[width=\linewidth]{head.jpg}}
+    \centerline{\includegraphics[width=\linewidth]{head}}
   \end{minipage}
   \hfill
   \begin{minipage}{.3\linewidth}
@@ -119,7 +119,7 @@
 \newcommand{\makecover}{
   \begin{center}
     \begin{center}
-      \includegraphics[width=0.8\linewidth]{cover.png}
+      \includegraphics[width=0.8\linewidth]{cover}
     \end{center}
     \vspace{1cm}
     \bfseries\huge{本科实验报告}\\
