feat(demo and readme): separate the repo then update demo and README files

--- a/demo.tex
+++ b/demo.tex
@@ -3,11 +3,11 @@
 % Part 0 Edit the info
 % =============================================
 
-\major{信息工程}
-\name{徐阳}
+\major{生物工程}
+\name{饭饭}
 \title{本科实验报告}
-\stuid{3171002333}
-\college{信息与电子工程学院}
+\stuid{2182333333}
+\college{生命学院}
 \date{\zhtoday}
 \lab{寝室}
 \course{数字信号处理}
@@ -15,7 +15,7 @@
 \grades{59}
 \expname{系统传输函数零极点分析}
 \exptype{设计实验}
-\partner{nil}
+\partner{Bob}
 
 \begin{document}
 % =============================================
